--- a/app/src/main/res/layout/activity_block.xml
+++ b/app/src/main/res/layout/activity_block.xml
@@ -35,15 +35,22 @@
         android:id="@+id/bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/common_google_signin_btn_text_dark"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="536dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.822"
+        app:srcCompat="@drawable/common_google_signin_btn_text_dark" />
 
     <ImageView
         android:id="@+id/ball"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:srcCompat="@android:drawable/ic_notification_overlay"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="455dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.604"
+        app:srcCompat="@android:drawable/ic_notification_overlay" />
 </androidx.constraintlayout.widget.ConstraintLayout>
