--- a/app/src/main/res/layout/activity_werewolf_position.xml
+++ b/app/src/main/res/layout/activity_werewolf_position.xml
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:srcCompat="@drawable/wolf" />
+        app:srcCompat="@drawable/wolf2" />
 
     <TextView
         android:id="@+id/positionName"
