--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,22 +24,22 @@
 
     <Button
         android:id="@+id/RPS"
-        android:layout_width="210dp"
-        android:layout_height="70dp"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_marginTop="100dp"
         android:text="じゃんけん"
-        android:textSize="36sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text" />
 
     <Button
         android:id="@+id/werewolf"
-        android:layout_width="210dp"
-        android:layout_height="70dp"
+        android:layout_width="216dp"
+        android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:text="人狼"
-        android:textSize="36sp"
+        android:text="ワンナイト人狼"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/RPS" />
