--- a/app/src/main/res/layout/activity_werewolf_position_config.xml
+++ b/app/src/main/res/layout/activity_werewolf_position_config.xml
@@ -43,7 +43,7 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/wolf2" />
+        app:srcCompat="@drawable/wolf" />
 
     <ImageView
         android:id="@+id/imageView12"
