--- a/app/src/main/res/layout/activity_werewolf_villager.xml
+++ b/app/src/main/res/layout/activity_werewolf_villager.xml
@@ -6,4 +6,48 @@
     android:layout_height="match_parent"
     android:background="#333333">
 
+    <TextView
+        android:id="@+id/vilText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="村人はただの一般人だ。"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <TextView
+        android:id="@+id/vilText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="夜にすることは特にない。"
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vilText1" />
+
+    <TextView
+        android:id="@+id/vilText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="誰を信じるかがゲームの鍵だ。"
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vilText2" />
+
+    <Button
+        android:id="@+id/vilOK"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
