--- a/app/src/main/res/layout/activity_r_p_s.xml
+++ b/app/src/main/res/layout/activity_r_p_s.xml
@@ -22,49 +22,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155" />
-
-    <Button
-        android:id="@+id/scissors"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#aaee77"
-        android:text="チョキ"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintVertical_bias="0.769" />
-
-    <Button
-        android:id="@+id/paper"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#77aaee"
-        android:text="パー"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.576"
-        app:layout_constraintStart_toEndOf="@+id/scissors"
-        app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintVertical_bias="0.768" />
-
-    <Button
-        android:id="@+id/rock"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#ee77aa"
-        android:text="グー"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/scissors"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintVertical_bias="0.768" />
+        app:layout_constraintVertical_bias="0.15" />
 
     <TextView
         android:id="@+id/subtext"
@@ -74,12 +32,12 @@
         android:textColor="@color/tw__composer_red"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/scissors"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.635" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/back"
@@ -97,40 +55,38 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="0dp" />
 
-    <ImageView
-        android:id="@+id/imageView18"
+    <ImageButton
+        android:id="@+id/rockButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/hand_rock_pic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/rock"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="@+id/rock"
+        app:layout_constraintEnd_toStartOf="@+id/scissorsButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655"
-        app:srcCompat="@drawable/hand_rock_pic" />
+        app:layout_constraintVertical_bias="0.7" />
 
-    <ImageView
-        android:id="@+id/imageView19"
+    <ImageButton
+        android:id="@+id/scissorsButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@drawable/hand_scissors_pic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/scissors"
-        app:layout_constraintStart_toStartOf="@+id/scissors"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655"
-        app:srcCompat="@drawable/hand_scissors_pic" />
+        app:layout_constraintVertical_bias="0.7" />
 
-    <ImageView
-        android:id="@+id/imageView20"
+    <ImageButton
+        android:id="@+id/paperButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="40dp"
+        android:background="@drawable/hand_paper_pic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/paper"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="@+id/paper"
+        app:layout_constraintStart_toEndOf="@+id/scissorsButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655"
-        app:srcCompat="@drawable/hand_paper_pic" />
+        app:layout_constraintVertical_bias="0.7" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -141,39 +97,26 @@
         app:layout_constraintGuide_begin="0dp" />
 
     <ImageView
-        android:id="@+id/imageView21"
+        android:id="@+id/opponent"
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/text"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/text"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/bot_hand_rock" />
+        app:layout_constraintVertical_bias="0.3" />
 
-    <ImageView
-        android:id="@+id/imageView22"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <Button
+        android:id="@+id/okButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/text"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/bot_hand_scissors" />
-
-    <ImageView
-        android:id="@+id/imageView23"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/text"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/bot_hand_paper" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
