--- a/app/src/main/res/layout/activity_werewolf_diviner.xml
+++ b/app/src/main/res/layout/activity_werewolf_diviner.xml
@@ -134,4 +134,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9" />
 
+    <Button
+        android:id="@+id/leftCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="残り２枚のカードを見る"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toTopOf="@+id/divine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
